--- a/res/layout/list_report_item_edit.xml
+++ b/res/layout/list_report_item_edit.xml
@@ -1,64 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@drawable/list_item_drawable" >
 
-    <TextView
-        android:id="@+id/amountTextView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_marginLeft="16dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/font_major_dark"
-        android:textSize="22sp" />
-
-    <ImageView
-        android:id="@+id/warningImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:contentDescription="@string/warning"
-        android:src="@drawable/warning"
-        android:visibility="invisible" />
-
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" >
-
-        <TextView
-            android:id="@+id/vendorTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:ellipsize="end"
-            android:gravity="right"
-            android:singleLine="true"
-            android:textColor="@color/font_minor_dark"
-            android:textSize="20sp" />
-
-        <LinearLayout
-            android:id="@+id/iconLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:gravity="right"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/categoryImageView"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:contentDescription="@string/tag"
-                android:src="@drawable/default_icon" />
-        </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
         
+	    <TextView
+	        android:id="@+id/amountTextView"
+	        android:layout_width="0dp"
+	        android:layout_height="match_parent"
+	        android:layout_weight="1"
+	        android:layout_marginLeft="16dp"
+	        android:gravity="center_vertical"
+	        android:textColor="@color/font_major_dark"
+	        android:textSize="22sp" />
+	
+	    <ImageView
+	        android:id="@+id/warningImageView"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:contentDescription="@string/warning"
+	        android:src="@drawable/warning"
+	        android:visibility="invisible" />
+	
+	    <LinearLayout
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:orientation="vertical"
+	        android:layout_marginLeft="16dp"
+	        android:layout_marginRight="16dp" >
+	
+	        <TextView
+	            android:id="@+id/vendorTextView"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="12dp"
+	            android:ellipsize="end"
+	            android:gravity="right"
+	            android:singleLine="true"
+	            android:textColor="@color/font_minor_dark"
+	            android:textSize="20sp" />
+	
+	        <LinearLayout
+	            android:id="@+id/iconLayout"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="6dp"
+	            android:layout_marginBottom="12dp"
+	            android:gravity="right"
+	            android:orientation="horizontal" >
+	
+	            <ImageView
+	                android:id="@+id/categoryImageView"
+	                android:layout_width="16dp"
+	                android:layout_height="16dp"
+	                android:contentDescription="@string/tag"
+	                android:src="@drawable/default_icon" />
+	        </LinearLayout>
+	        
+	    </LinearLayout>
+	    
     </LinearLayout>
+            
+		    <include                 
+				android:layout_width="match_parent"
+				android:layout_height="0.5dp"
+				android:layout_marginLeft="12dp"
+				android:layout_marginRight="12dp"
+			  	layout="@layout/divider"/>
 
 </LinearLayout>
