--- a/res/layout/me_about.xml
+++ b/res/layout/me_about.xml
@@ -65,6 +65,14 @@
 	        android:layout_marginTop="24dp"
 	        android:text="@string/about_content"
 	        android:textSize="20sp" />
+
+	    <TextView
+	        android:id="@+id/textView1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:layout_alignParentLeft="true"
+	        android:text="@string/versionControl" />
 	
 	</RelativeLayout>
 
