--- a/res/layout/report_unarchived_items.xml
+++ b/res/layout/report_unarchived_items.xml
@@ -61,6 +61,7 @@
 	            android:id="@+id/itemCountTextView"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
+	            android:layout_marginRight="6dp"
 	            android:textColor="@color/major_light"
 	            android:textSize="16sp" />
 	
@@ -82,7 +83,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleLayout"
         android:divider="@null"
-        android:cacheColorHint="#00000000" />
+        android:cacheColorHint="#00000000"
+        android:listSelector="@drawable/list_item_drawable" />
 
     <TextView
         android:id="@+id/warningTextView"
