--- a/res/layout/reim_show.xml
+++ b/res/layout/reim_show.xml
@@ -299,7 +299,7 @@
 	                android:layout_toRightOf="@+id/categoryImageView"
 	                android:layout_marginLeft="10dp"
 	                android:layout_marginRight="16dp"
-	                android:text="@string/notAvailable"
+	                android:text="@string/not_available"
 	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
