--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -100,6 +100,7 @@
 						android:layout_toLeftOf="@+id/statusImageView"
 						android:layout_marginRight="14dp"
 			            android:background="@null"
+			            android:inputType="text"
 			            android:hint="@string/input_report_title"
 			            android:textColor="@color/font_major_dark"
 			            android:textSize="20sp" />
