--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -31,5 +31,10 @@
         <item name="android:windowEnterAnimation">@anim/window_in</item>  
         <item name="android:windowExitAnimation">@anim/window_out</item>
     </style>
+    
+    <style name="FullWindowAnimation" parent="android:Animation" mce_bogus="1">
+        <item name="android:windowEnterAnimation">@anim/full_window_in</item>  
+        <item name="android:windowExitAnimation">@anim/full_window_out</item>
+    </style>
 
 </resources>
