--- a/res/layout/list_report_detail.xml
+++ b/res/layout/list_report_detail.xml
@@ -2,59 +2,203 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:clickable="false"
     android:background="@color/major_light" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/total_amount"
-        android:textColor="@color/hint_grey"
-        android:textSize="14sp" />
+    
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical"
+	    android:clickable="false"
+	    android:background="@color/major_light" >
+	
+	    <RelativeLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="40dp"
+	        android:layout_marginLeft="16dp"
+	        android:layout_marginRight="16dp" >
+	
+	        <TextView
+	            android:id="@+id/titleTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textColor="@color/font_major_dark"
+	            android:textSize="20sp" />
+	
+	        <ImageView
+	            android:id="@+id/statusImageView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+				android:layout_centerVertical="true"
+				android:layout_alignParentRight="true"
+	            android:contentDescription="@string/status" />
+	
+	    </RelativeLayout>
+	
+	    <TextView
+	        android:id="@+id/timeTextView"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+			android:layout_marginLeft="16dp"
+	        android:layout_marginTop="22dp"
+	        android:layout_marginBottom="22dp"
+	        android:textColor="@color/hint_grey"
+	        android:textSize="14sp" />
+	
+	</LinearLayout>
+            
+	<include                 
+		android:layout_width="match_parent"
+		android:layout_height="0.5dp"
+	  	layout="@layout/divider"/>
+	
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+		android:orientation="vertical"
+	    android:clickable="false"
+	    android:background="@color/major_light" >
+	
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="22dp"
+	        android:layout_marginLeft="16dp"
+	        android:layout_marginRight="16dp" >
+	
+	        <TextView
+	            android:id="@+id/senderPrompt"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/sender"
+	            android:textColor="@color/hint_grey"
+	            android:textSize="14sp" />
+	
+	        <TextView
+	            android:id="@+id/senderTextView"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="14dp"
+	            android:textColor="@color/font_major_dark"
+	            android:textSize="14sp" />
+	
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="14dp"
+	        android:layout_marginLeft="16dp"
+	        android:layout_marginRight="16dp" >
+	
+	        <TextView
+	            android:id="@+id/managerPrompt"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/submit_to"
+	            android:textColor="@color/hint_grey"
+	            android:textSize="14sp" />
+	
+	        <TextView
+	            android:id="@+id/managerTextView"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="14dp"
+	            android:textColor="@color/font_major_dark"
+	            android:textSize="14sp" />
+	
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="14dp"
+	        android:layout_marginBottom="22dp"
+	        android:layout_marginLeft="16dp"
+	        android:layout_marginRight="16dp" >
+	
+	        <TextView
+	            android:id="@+id/ccPrompt"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/cc"
+	            android:textColor="@color/hint_grey"
+	            android:textSize="14sp" />
+	
+	        <TextView
+	            android:id="@+id/ccTextView"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="14dp"
+	            android:textColor="@color/font_major_dark"
+	            android:textSize="14sp" />
+	
+	    </LinearLayout>
+	
+	</LinearLayout>
+            
+	<include                 
+		android:layout_width="match_parent"
+		android:layout_height="0.5dp"
+	  	layout="@layout/divider"/>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
-        android:gravity="bottom"
-        android:layout_marginLeft="14dp" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/amountTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@color/font_reim_number"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/signTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:text="@string/rmb"
-            android:textColor="@color/hint_black"
-            android:textSize="16sp" />
-
+	    <TextView
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="22dp"
+	        android:layout_marginBottom="22dp"
+	        android:layout_marginLeft="16dp"
+	        android:text="@string/total_amount"
+	        android:textColor="@color/hint_grey"
+	        android:textSize="14sp" />
+	
+	    <LinearLayout
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:layout_gravity="center_vertical"
+	        android:gravity="bottom"
+	        android:layout_marginLeft="14dp" >
+	
+	        <TextView
+	            android:id="@+id/amountTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="4dp"
+	            android:ellipsize="end"
+	            android:singleLine="true"
+	            android:textColor="@color/font_reim_number"
+	            android:textSize="24sp" />
+	
+	        <TextView
+	            android:id="@+id/signTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="3dp"
+	            android:text="@string/rmb"
+	            android:textColor="@color/hint_black"
+	            android:textSize="16sp" />
+	
+	    </LinearLayout>
+	
+	    <TextView
+	        android:id="@+id/itemCountTextView"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="22dp"
+	        android:layout_marginBottom="22dp"
+	        android:layout_marginLeft="14dp"
+	        android:layout_marginRight="16dp"
+	        android:text="@string/item_count"
+	        android:textColor="@color/hint_grey"
+	        android:textSize="14sp" />
+    
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/itemCountTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/item_count"
-        android:textColor="@color/hint_grey"
-        android:textSize="14sp" />
 
 </LinearLayout>
