--- a/res/layout/start_splash.xml
+++ b/res/layout/start_splash.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:src="@drawable/splash_image"
-    android:scaleType="fitXY"
-    android:contentDescription="@string/background">
+    android:background="@drawable/start_background" >
 
-</ImageView>
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_above="@+id/pivotView"
+		android:layout_centerHorizontal="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/start_icon" />
+
+    <View
+        android:id="@+id/pivotView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_centerHorizontal="true"
+		android:layout_below="@+id/pivotView"
+        android:text="@string/app_name"
+        android:textColor="@color/major_light"
+        android:textSize="16sp" />
+
+</RelativeLayout>
