--- a/res/layout/start_welcome.xml
+++ b/res/layout/start_welcome.xml
@@ -21,19 +21,54 @@
         android:contentDescription="@string/app_name"
         android:src="@drawable/start_icon" />
 
-    <Button
-        android:id="@+id/signUpButton"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/signInButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"        
-        android:background="@drawable/button_long_light_solid_drawable"
-        android:text="@string/sign_up"
-        android:textColor="@color/button_text_dark_color"
-        android:textSize="20sp" />
+        android:layout_marginRight="16dp"
+        android:layout_above="@+id/hintTextView"
+        android:layout_centerHorizontal="true" >
+
+        <Button
+            android:id="@+id/phoneSignUpButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/pivotView"
+            android:layout_marginRight="6dp"
+            android:background="@drawable/button_short_light_solid_drawable"
+            android:text="@string/sign_up_by_phone"
+            android:textColor="@color/button_text_dark_color"
+            android:textSize="20sp" />
+
+        <View
+            android:id="@+id/pivotView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerInParent="true" />
+
+        <Button
+            android:id="@+id/emailSignUpButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/pivotView"
+            android:layout_marginLeft="6dp"
+            android:background="@drawable/button_short_light_solid_drawable"
+            android:text="@string/sign_up_by_email"
+            android:textColor="@color/button_text_dark_color"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/hintTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_above="@+id/signInButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="6dp"
+        android:text="@string/have_password"
+        android:textColor="@color/hint_white" />
 
     <Button
         android:id="@+id/signInButton"
