fix bugs of edittext

--- a/res/layout/me_change_password.xml
+++ b/res/layout/me_change_password.xml
@@ -75,9 +75,6 @@
         android:layout_marginTop="35dp"
         android:ems="10"
         android:hint="@string/input_confirm_password"
-        android:inputType="textPassword" >
-
-        <requestFocus />
-    </EditText>
+        android:inputType="textPassword" />
 
 </RelativeLayout>
