--- a/res/layout/reim_vendor.xml
+++ b/res/layout/reim_vendor.xml
@@ -55,10 +55,7 @@
             android:background="@null"
             android:ems="10"
             android:hint="@string/input_vendor"
-            android:inputType="text" >
-
-            <requestFocus />
-        </EditText>
+            android:inputType="text" />
 
     </RelativeLayout>
             
