--- a/res/layout/start_find_by_phone.xml
+++ b/res/layout/start_find_by_phone.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/phoneBaseLayout" >
+    android:id="@+id/baseLayout" >
 
     <ImageView
         android:layout_width="match_parent"
@@ -18,14 +18,14 @@
         android:layout_height="50dp" >
 
         <ImageView
-            android:id="@+id/filterImageView"
+            android:id="@+id/backImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="16dp"
-            android:contentDescription="@string/filter"
-            android:src="@drawable/filter" />
+	        android:contentDescription="@string/back"
+	        android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/titleTextView"
@@ -39,11 +39,11 @@
     </RelativeLayout>
 
     <EditText
-        android:id="@+id/mobileEditText"
+        android:id="@+id/phoneEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="120dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:hint="@string/input_phone"
@@ -53,15 +53,14 @@
         android:background="@null"
         android:cursorVisible="true"
         android:textCursorDrawable="@drawable/cursor" >
-
-        <requestFocus />
+        
     </EditText>
 
     <include 
-        android:id="@+id/mobileDivider"
+        android:id="@+id/divider1"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@+id/mobileEditText"
+        android:layout_below="@+id/phoneEditText"
         android:layout_marginTop="12dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -71,9 +70,9 @@
         android:id="@+id/codeEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/mobileEditText"
-        android:layout_alignRight="@+id/mobileEditText"
-        android:layout_below="@+id/mobileDivider"
+        android:layout_alignLeft="@+id/phoneEditText"
+        android:layout_toLeftOf="@+id/acquireCodeButton"
+        android:layout_below="@+id/divider1"
         android:layout_marginTop="12dp"
         android:hint="@string/input_code"
         android:inputType="textEmailAddress" 
@@ -86,52 +85,37 @@
     <Button
         android:id="@+id/acquireCodeButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/codeEditText"
-        android:layout_alignBottom="@+id/codeEditText"
-		android:layout_below="@+id/mobileDivider"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="-6dp"
-        android:layout_marginBottom="-6dp"
-        android:background="@drawable/button_short_solid_light"
+        android:layout_height="32dp"
+        android:layout_below="@+id/divider1"
+        android:layout_alignRight="@+id/phoneEditText"
+        android:layout_marginTop="6dp"
+		android:background="@drawable/button_short_light_solid_drawable"
+		android:gravity="center"
         android:text="@string/acquire_code"
-        android:textColor="@color/major_dark" />
+        android:textColor="@color/start_button_text_color"
+        android:textSize="16sp" />
 
     <include 
-        android:id="@+id/codeDivider"
+        android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@+id/codeEditText"
-        android:layout_marginTop="12dp"
+        android:layout_below="@+id/acquireCodeButton"
+        android:layout_marginTop="6dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         layout="@layout/start_divider"/>
 
     <Button
-        android:id="@+id/phoneConfirmButton"
+        android:id="@+id/nextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/codeDivider"
-        android:layout_marginTop="12dp"
+        android:layout_below="@+id/divider2"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/button_long_light_solid_drawable"
-        android:text="@string/confirm"
+        android:text="@string/next"
         android:textColor="@color/start_button_text_color"
         android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/phoneCancelButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/phoneConfirmButton"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/button_long_light_border_drawable"
-        android:text="@string/cancel"
-        android:textColor="@color/button_text_light_color"
-        android:textSize="20sp"/>
 
 </RelativeLayout>
