--- a/res/layout/start_reset_password.xml
+++ b/res/layout/start_reset_password.xml
@@ -3,44 +3,103 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/baseLayout" >
-    
-        <requestFocus />
 
-    <Button
-        android:id="@+id/cancelButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/confirmButton"
-        android:layout_alignRight="@+id/confirmPasswordEditText"
-        android:text="@string/cancel" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:contentDescription="@string/background"
+        android:scaleType="fitXY"
+        android:src="@drawable/start_background" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp" >
+
+        <ImageView
+            android:id="@+id/backImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/back"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/reset_password"
+            android:textColor="@color/major_light"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/newPasswordEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:hint="@string/input_new_password"
-        android:inputType="textPassword" />
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:hint="@string/input_password"
+        android:inputType="textPassword"
+        android:textColor="@color/font_major_light"
+        android:textColorHint="@color/hint_white" 
+        android:background="@null"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@drawable/cursor" />
+
+    <include 
+        android:id="@+id/divider1"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/newPasswordEditText"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        layout="@layout/start_divider"/>
 
     <EditText
         android:id="@+id/confirmPasswordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/newPasswordEditText"
-        android:layout_below="@+id/newPasswordEditText"
-        android:layout_marginTop="21dp"
+        android:layout_alignRight="@+id/newPasswordEditText"
+        android:layout_below="@+id/divider1"
+        android:layout_marginTop="12dp"
         android:hint="@string/input_confirm_password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="@color/font_major_light"
+        android:textColorHint="@color/hint_white" 
+        android:background="@null"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@drawable/cursor" />
+
+    <include 
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/confirmPasswordEditText"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        layout="@layout/start_divider"/>
 
     <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/completeButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/confirmPasswordEditText"
-        android:layout_below="@+id/confirmPasswordEditText"
-        android:layout_marginTop="41dp"
-        android:text="@string/confirm" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/divider2"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/button_long_light_solid_drawable"
+        android:text="@string/complete"
+        android:textColor="@color/start_button_text_color"
+        android:textSize="20sp" />
 
 </RelativeLayout>
