--- a/res/layout/start_sign_in.xml
+++ b/res/layout/start_sign_in.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/baseLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:id="@+id/baseLayout" >
 
     <ImageView
         android:layout_width="match_parent"
@@ -46,8 +45,6 @@
         android:textColorHint="@color/hint_white" 
         android:background="@null"
         android:textCursorDrawable="@null" />
-
-    <requestFocus />
 
     <include 
         android:id="@+id/signInDivider"
