fix bug of camera

--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -132,68 +132,74 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 			  	layout="@layout/divider" />
-	
-	        <LinearLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:orientation="horizontal"
-	            android:background="@color/major_light" >
 
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_marginTop="22dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/submit_to"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/managerTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_marginTop="22dp"
-	                android:layout_marginBottom="22dp"
-	                android:layout_marginLeft="22dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="16sp" />
+			<LinearLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:orientation="vertical"
+		        android:background="@color/major_light" >
 	
-	        </LinearLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="82dp"
-			  	layout="@layout/divider"/>
+		        <LinearLayout
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:orientation="horizontal" >
 	
-	        <LinearLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:orientation="horizontal"
-	            android:background="@color/major_light" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_marginTop="22dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/cc"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/ccTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_marginTop="22dp"
-	                android:layout_marginBottom="22dp"
-	                android:layout_marginLeft="22dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="16sp" />
+		            <TextView
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_marginTop="22dp"
+		                android:layout_marginLeft="16dp"
+		                android:text="@string/submit_to"
+		                android:textColor="@color/hint_grey"
+		                android:textSize="14sp" />
 	
-	        </LinearLayout>
+		            <TextView
+		                android:id="@+id/managerTextView"
+		                android:layout_width="match_parent"
+		                android:layout_height="wrap_content"
+		                android:layout_marginTop="22dp"
+		                android:layout_marginBottom="22dp"
+		                android:layout_marginLeft="22dp"
+		                android:layout_marginRight="16dp"
+		                android:textColor="@color/font_major_dark"
+		                android:textSize="16sp" />
+		
+		        </LinearLayout>
+	            
+			    <include                 
+					android:layout_width="match_parent"
+					android:layout_height="0.5dp"
+					android:layout_marginLeft="82dp"
+				  	layout="@layout/divider"/>
+		
+		        <LinearLayout
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:orientation="horizontal" >
+	
+		            <TextView
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_marginTop="22dp"
+		                android:layout_marginLeft="16dp"
+		                android:text="@string/cc"
+		                android:textColor="@color/hint_grey"
+		                android:textSize="14sp" />
+	
+		            <TextView
+		                android:id="@+id/ccTextView"
+		                android:layout_width="match_parent"
+		                android:layout_height="wrap_content"
+		                android:layout_marginTop="22dp"
+		                android:layout_marginBottom="22dp"
+		                android:layout_marginLeft="22dp"
+		                android:layout_marginRight="16dp"
+		                android:textColor="@color/font_major_dark"
+		                android:textSize="16sp" />
+		
+		        </LinearLayout>
+		        
+			</LinearLayout>
             
 			<include                 
 				android:layout_width="match_parent"
