--- a/res/layout/fragment_me.xml
+++ b/res/layout/fragment_me.xml
@@ -53,7 +53,6 @@
 				    android:layout_alignParentLeft="true"
 				    android:layout_centerVertical="true"
 				    android:layout_marginLeft="16dp"
-					android:clickable="true"
 				    android:contentDescription="@string/avatar"
 				    android:src="@drawable/default_avatar"
 				    reim:border_width="0dp" />
@@ -122,7 +121,7 @@
 	        	layout="@layout/divider"/>
 			
             <RelativeLayout
-                android:id="@+id/defaultManagerLayout"
+                android:id="@+id/messageLayout"
 				android:layout_width="match_parent"
 				android:layout_height="50dp"
 				android:clickable="true"
@@ -134,7 +133,7 @@
 				    android:layout_centerVertical="true"
 				    android:layout_alignParentLeft="true"
 				    android:layout_marginLeft="16dp"
-				    android:text="@string/default_manager"
+				    android:text="@string/my_messages"
 				    android:textSize="16sp"
 				    android:textColor="@color/font_major_dark" />
 				
@@ -168,30 +167,6 @@
 				    android:layout_alignParentLeft="true"
 				    android:layout_marginLeft="16dp"
 				    android:text="@string/invite"
-				    android:textSize="16sp"
-				    android:textColor="@color/font_major_dark" />
-				
-			</RelativeLayout>
-            
-	        <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-	        	layout="@layout/divider"/>
-			
-            <RelativeLayout
-                android:id="@+id/myInvitesLayout"
-				android:layout_width="match_parent"
-				android:layout_height="50dp"
-				android:clickable="true"
-				android:background="@drawable/me_item_drawable" >
-					     
-				<TextView
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_centerVertical="true"
-				    android:layout_alignParentLeft="true"
-				    android:layout_marginLeft="16dp"
-				    android:text="@string/my_invites"
 				    android:textSize="16sp"
 				    android:textColor="@color/font_major_dark" />
 				
