--- a/res/layout/me_category_management.xml
+++ b/res/layout/me_category_management.xml
@@ -35,7 +35,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="16dp"
-            android:text="@string/add"
+            android:text="@string/establish"
             android:textColor="@color/major_light"
             android:textSize="16sp" />
     </RelativeLayout>
