--- a/res/layout/me_messages.xml
+++ b/res/layout/me_messages.xml
@@ -25,24 +25,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/my_invites"
+            android:text="@string/my_messages"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
+        
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/inviteListView"
+        android:id="@+id/messageListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout" >
     </ListView>
 
     <TextView
-        android:id="@+id/inviteTextView"
+        android:id="@+id/messageTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
         android:gravity="center"
-        android:text="@string/no_invites" />
+        android:text="@string/no_messages" />
 
 </RelativeLayout>
