--- a/res/layout/me_settings.xml
+++ b/res/layout/me_settings.xml
@@ -31,97 +31,155 @@
 
     </RelativeLayout>
 
-    <ScrollView
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-        <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="vertical" >
-			
-            <RelativeLayout
-                android:id="@+id/aboutLayout"
-				android:layout_width="match_parent"
-				android:layout_height="50.5dp"
-				android:layout_marginTop="18dp"
-				android:clickable="true"
-				android:background="@drawable/me_item_drawable" >
-            
-		        <include                 
-					android:layout_width="match_parent"
-					android:layout_height="0.5dp"
-		        	layout="@layout/divider"/>
-					     
-				<TextView
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_centerVertical="true"
-				    android:layout_alignParentLeft="true"
-				    android:layout_marginLeft="16dp"
-				    android:text="@string/about_us"
-				    android:textSize="16sp"
-				    android:textColor="@color/font_major_dark" />
-				
-			</RelativeLayout>
-            
-	        <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-	        	layout="@layout/divider"/>
-			
-            <RelativeLayout
-                android:id="@+id/feedbackLayout"
-				android:layout_width="match_parent"
-				android:layout_height="50.5dp"
-				android:clickable="true"
-				android:background="@drawable/me_item_drawable" >
-					     
-				<TextView
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_centerVertical="true"
-				    android:layout_alignParentLeft="true"
-				    android:layout_marginLeft="16dp"
-				    android:text="@string/feedback"
-				    android:textSize="16sp"
-				    android:textColor="@color/font_major_dark" />
-            
-		        <include                 
-					android:layout_width="match_parent"
-					android:layout_height="0.5dp"
-					android:layout_alignParentBottom="true"
-		        	layout="@layout/divider"/>
-				
-			</RelativeLayout>
-			
-            <RelativeLayout
-				android:layout_width="match_parent"
-				android:layout_height="50.5dp"
-				android:background="@drawable/me_item_drawable" >
+        <RelativeLayout
+            android:id="@+id/categoryLayout"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/me_item_drawable"
+            android:clickable="true" >
 
-			    <Button
-			        android:id="@+id/signOutButton"
-			        android:layout_width="match_parent"
-			        android:layout_height="wrap_content"
-			        android:layout_marginTop="5dp"
-			        android:layout_marginBottom="5dp"
-			        android:layout_marginLeft="10dp"
-			        android:layout_marginRight="10dp"
-			        android:background="@drawable/button_long_dark_drawable"
-			        android:text="@string/sign_out"
-			        android:textColor="@color/button_text_light_color" />
-            
-		        <include                 
-					android:layout_width="match_parent"
-					android:layout_height="0.5dp"
-					android:layout_alignParentBottom="true"
-		        	layout="@layout/divider"/>
-				
-			</RelativeLayout>
-			
-        </LinearLayout>
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/divider" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:text="@string/category_management"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:contentDescription="@string/next"
+                android:src="@drawable/next" />
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_alignParentBottom="true"
+                layout="@layout/divider" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/tagLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50.5dp"
+            android:layout_marginBottom="6dp"
+            android:background="@drawable/me_item_drawable"
+            android:clickable="true" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:text="@string/tag_management"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:contentDescription="@string/next"
+                android:src="@drawable/next" />
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_alignParentBottom="true"
+                layout="@layout/divider" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/aboutLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50.5dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/me_item_drawable"
+            android:clickable="true" >
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/divider" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:text="@string/about_us"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp" />
+        </RelativeLayout>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/divider" />
+
+        <RelativeLayout
+            android:id="@+id/feedbackLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50.5dp"
+            android:background="@drawable/me_item_drawable"
+            android:clickable="true" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:text="@string/feedback"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp" />
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_alignParentBottom="true"
+                layout="@layout/divider" />
+        </RelativeLayout>
         
-    </ScrollView>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <Button
+            android:id="@+id/signOutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/button_long_dark_drawable"
+            android:text="@string/sign_out"
+            android:textColor="@color/button_text_light_color" />
+
+    </RelativeLayout>
 
 </LinearLayout>
