--- a/res/layout/me_profile.xml
+++ b/res/layout/me_profile.xml
@@ -382,6 +382,7 @@
 	        <include                 
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
+				android:layout_marginBottom="18dp"
 	        	layout="@layout/divider"/>
 			
         </LinearLayout>
