--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/piechart_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
     android:orientation="vertical"
     android:background="@color/background" >
 
@@ -23,58 +21,197 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:layout_weight="7"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent" >
 
         <LinearLayout
-            android:id="@+id/newPieContainer"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:orientation="horizontal" >
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/processPieContainer"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/donePieContainer"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:orientation="vertical" >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="36dp"
+                android:layout_marginLeft="36dp"
+                android:layout_marginRight="36dp" >
+
+                <ImageView
+                    android:id="@+id/arcImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="210dp"
+                    android:contentDescription="@string/statistics"
+                    android:src="@drawable/arc" />
+
+                <FrameLayout
+                	android:id="@+id/statContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                </FrameLayout>
+
+                <ImageView
+                    android:id="@+id/arcCoverImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="210dp"
+                    android:contentDescription="@string/statistics"
+                    android:src="@drawable/arc_cover" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical" >
+
+                    <TextView
+                        android:id="@+id/mainPercentTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:textColor="@color/major_dark"
+                        android:textSize="50sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@+id/mainPercentTextView"
+                        android:text="@string/stat_new"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/mainPercentTextView"
+                        android:layout_marginTop="4dp"
+                        android:text="@string/percent"
+                        android:textColor="@color/major_dark"
+                        android:textSize="24sp" />
+
+                </RelativeLayout>
+                
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp" >
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" >
+
+                    <ImageView
+                        android:id="@+id/markDoneImageView"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_alignTop="@+id/markDoneTextView"
+                        android:layout_marginTop="5dp"
+                        android:contentDescription="@string/mark"
+                        android:src="@drawable/mark_done" />
+
+                    <TextView
+                        android:id="@+id/markDoneTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:layout_toRightOf="@+id/markDoneImageView"
+                        android:text="@string/stat_done"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/donePercentTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/markDoneImageView"
+                        android:layout_alignLeft="@+id/markDoneTextView"
+                        android:layout_alignRight="@+id/markDoneTextView"
+                        android:layout_below="@+id/markDoneTextView"
+                        android:gravity="center"
+                        android:textColor="@color/hint_dark_grey"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp" >
+
+                    <ImageView
+                        android:id="@+id/markOngoingImageView"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_alignTop="@+id/markOngoingTextView"
+                        android:layout_marginTop="5dp"
+                        android:contentDescription="@string/mark"
+                        android:src="@drawable/mark_ongoing" />
+
+                    <TextView
+                        android:id="@+id/markOngoingTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:layout_toRightOf="@+id/markOngoingImageView"
+                        android:text="@string/stat_ongoing"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/ongoingPercentTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/markOngoingTextView"
+                        android:layout_alignRight="@+id/markOngoingTextView"
+                        android:layout_below="@+id/markOngoingTextView"
+                        android:gravity="center"
+                        android:textColor="@color/hint_dark_grey"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp" >
+
+                    <ImageView
+                        android:id="@+id/markNewImageView"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_alignTop="@+id/markNewTextView"
+                        android:layout_marginTop="5dp"
+                        android:contentDescription="@string/mark"
+                        android:src="@drawable/mark_new" />
+
+                    <TextView
+                        android:id="@+id/markNewTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:layout_toRightOf="@+id/markNewImageView"
+                        android:text="@string/stat_new"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/newPercentTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/markNewImageView"
+                        android:layout_alignLeft="@+id/markNewTextView"
+                        android:layout_alignRight="@+id/markNewTextView"
+                        android:layout_below="@+id/markNewTextView"
+                        android:gravity="center"
+                        android:textColor="@color/hint_dark_grey"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+            </LinearLayout>
+           
         </LinearLayout>
         
-    </LinearLayout>
-    
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:layout_weight="3" >
-        
-         <LinearLayout
-            android:id="@+id/monthBarContainer"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:orientation="horizontal"
-        	android:padding="5dp"  >
-        </LinearLayout>
-        
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
