--- a/res/layout/report_approve.xml
+++ b/res/layout/report_approve.xml
@@ -54,7 +54,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        style="?android:attr/buttonBarStyle" >
 
         <Button
             android:id="@+id/rejectButton"
@@ -62,7 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/reject" />
+            android:text="@string/reject"
+            android:textColor="@color/hint_grey" />
 
         <Button
             android:id="@+id/approveButton"
@@ -70,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/approve" />
+            android:text="@string/approve" 
+            android:textColor="@color/major_dark"/>
     </LinearLayout>
 
 </LinearLayout>
