extend click area

--- a/res/layout/activity_me_default_manager.xml
+++ b/res/layout/activity_me_default_manager.xml
@@ -13,10 +13,11 @@
         <ImageView
             android:id="@+id/backImageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:contentDescription="@string/back"
             android:src="@drawable/back" />
 
@@ -32,10 +33,11 @@
         <TextView
             android:id="@+id/confirmTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
+			android:paddingLeft="16dp"
+			android:paddingRight="16dp"
+			android:gravity="center"
             android:text="@string/confirm"
             android:textSize="16sp"
             android:textColor="@color/major_light" />
