--- a/res/layout/activity_report_approve.xml
+++ b/res/layout/activity_report_approve.xml
@@ -12,10 +12,11 @@
         <ImageView
             android:id="@+id/backImageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:contentDescription="@string/back"
             android:src="@drawable/back" />
 
@@ -31,10 +32,11 @@
         <TextView
             android:id="@+id/commentTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
+			android:paddingLeft="16dp"
+			android:paddingRight="16dp"
+			android:gravity="center"
             android:text="@string/comment"
             android:textColor="@color/major_light"
             android:textSize="16sp" />
