--- a/res/layout/activity_me_profile.xml
+++ b/res/layout/activity_me_profile.xml
@@ -15,10 +15,11 @@
         <ImageView
             android:id="@+id/backImageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:contentDescription="@string/back"
             android:src="@drawable/back" />
 
