--- a/res/layout/activity_start_sign_up_by_phone.xml
+++ b/res/layout/activity_start_sign_up_by_phone.xml
@@ -17,8 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
+        android:padding="16dp"
         android:contentDescription="@string/back"
         android:src="@drawable/back" />
 
