--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -13,10 +13,11 @@
         <ImageView
             android:id="@+id/filterImageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:contentDescription="@string/filter"
             android:src="@drawable/filter" />
 
@@ -47,6 +48,19 @@
             android:text="@string/others_report"
             android:textSize="20sp"
             android:textColor="@color/hint_white" />
+
+        <ImageView
+            android:id="@+id/addImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:contentDescription="@string/add"
+            android:src="@drawable/add_report" />
 
     </RelativeLayout>
 
