--- a/res/layout/grid_member.xml
+++ b/res/layout/grid_member.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:reim="http://schemas.android.com/apk/res-auto"
     android:layout_width="50dp"
     android:layout_height="wrap_content" >
 
-    <ImageView
+    <classes.Widget.CircleImageView
         android:id="@+id/avatarImageView"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/member"
-        android:src="@drawable/default_avatar" />
+        android:src="@drawable/default_avatar" 
+       	reim:border_width="0dp" />
     
     <TextView
         android:id="@+id/nameTextView"
