--- a/res/layout/window_me_email.xml
+++ b/res/layout/window_me_email.xml
@@ -58,9 +58,7 @@
 		        android:layout_width="match_parent"
 		        android:layout_height="50.5dp"
 		        android:layout_marginTop="18dp"
-		        android:background="@drawable/me_item_drawable"
-		        android:focusable="true"
-		        android:focusableInTouchMode="true" >
+        		android:background="@color/major_light" >
 		
 			    <include
 			        android:layout_width="match_parent"
