--- a/res/layout/activity_reim_edit.xml
+++ b/res/layout/activity_reim_edit.xml
@@ -92,7 +92,7 @@
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginLeft="6dp"
-	                    android:text="@string/rmb"
+	                    android:text="@string/rmb_symbol"
 	                    android:textColor="@color/major_dark"
 	                    android:textSize="18sp" />
 
