--- a/res/layout/list_category.xml
+++ b/res/layout/list_category.xml
@@ -16,11 +16,12 @@
 
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="18dp"
         android:layout_toRightOf="@+id/iconImageView"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp" />
 
