--- a/res/layout/list_report.xml
+++ b/res/layout/list_report.xml
@@ -70,7 +70,7 @@
                 android:id="@+id/signTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/rmb"
+                android:text="@string/rmb_symbol"
                 android:textColor="@color/hint_black"
                 android:textSize="14sp" />
 
