fix bug of default manager

--- a/res/layout/activity_me_default_manager.xml
+++ b/res/layout/activity_me_default_manager.xml
@@ -48,6 +48,7 @@
         android:id="@+id/userListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:listSelector="@drawable/list_item_drawable"
         android:cacheColorHint="#00000000" >
     </ListView>
 
