--- a/res/anim/window_out.xml
+++ b/res/anim/window_out.xml
@@ -3,6 +3,11 @@
     <translate
         android:interpolator="@android:anim/decelerate_interpolator"
         android:fromYDelta="0%"
-        android:toYDelta="100%p"
-        android:duration="200"/>
+        android:toYDelta="50%p"
+        android:duration="300" />
+    <alpha
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0"
+        android:duration="300" />
 </set>
